# Ev3Emulator

./: .gitignore  CMakeLists.txt  Directory.Packages.props  Ev3Emulator.sln  README.md
CmakeTest/: CMakeLists.txt
CmakeTest/TestProject/: Another.c  Another.h  CMakeLists.txt  TestProject.c  TestProject.h
Ev3ConsoleCmakeTest/: Ev3ConsoleCmakeTest.csproj  Program.cs
Ev3ConsoleCmakeTest/Lms/: LmsWrapper.cs
Ev3ConsoleCmakeTest/Properties/: launchSettings.json
Ev3ConsoleCmakeTest/Tests/: TestWrapper.cs
Ev3ConsoleTest/: Ev3ConsoleTest.csproj  Program.cs
Ev3ConsoleTest/Emulation/: Ev3System.cs  LcdHandler.cs  LedHandler.cs  Logger.cs  OutputHandler.cs  SoundHandler.cs
Ev3ConsoleTest/Properties/: launchSettings.json
Ev3ConsoleTest/TestPrograms/: Program.rbf
Ev3Core/: Defines.cs  Ev3Core.csproj  GH.cs
Ev3Core/Ccom/: Bt.cs  Com_.cs  Daisy.cs  I2c.cs  Md5_.cs  Wifi.cs
Ev3Core/Cinput/: Input.cs
Ev3Core/Cmemory/: IMemory.cs  Memory.cs
Ev3Core/Coutput/: Output.cs
Ev3Core/Csound/: ISound.cs  Sound.cs
Ev3Core/Cui/: Lcd.cs  Terminal.cs  Ui.cs
Ev3Core/Enums/: AIconNo.cs  ArraySubcode.cs  BmpType.cs  BrowserType.cs  BtType.cs  ButtonType.cs  Color.cs  ComGetSubcode.cs  ComReadSubcode.cs  ComSetSubcode.cs  ComWriteSubcode.cs  Conn.cs  DataFormat.cs  Del.cs  DevCmd.cs  DspStat.cs  Encrypt_.cs  Err.cs  FileSubcode.cs  FileType.cs  FilenameSubcode.cs  FontType.cs  HwType.cs  IconType.cs  InfoSubcode.cs  InputDeviceSubcode.cs  LIconNo.cs  LedPattern.cs  LedType.cs  MIconNo.cs  MathType.cs  Mix.cs  NIconNo.cs  NxtColor.cs  ObjStat.cs  Op.cs  ProgramInfoSubcode.cs  Result.cs  SIconNo.cs  Slot.cs  (+10 more)
Ev3Core/Extensions/: ArrayPointerExtensions.cs  EnumerableExtensions.cs  StringExtensions.cs
Ev3Core/Helpers/: BmpHelper.cs  CommonHelper.cs  SoundHelper.cs
Ev3Core/Interfaces/: IEv3System.cs  IInputHandler.cs  ILcdHandler.cs  ILedHandler.cs  ILogger.cs  IOutputHandler.cs  ISoundHandler.cs
Ev3Core/Lms2012/: Branch.cs  Compare.cs  Lms.cs  LmsTypes.cs  Math_.cs  Move.cs  Timer_.cs  Validate.cs
Ev3Core/Memory/: IMemory.cs
Ev3CoreUnsafe/: Defines.cs  Ev3CoreUnsafe.csproj  GH.cs
Ev3CoreUnsafe/Ccom/: Bt.cs  Com_.cs  Daisy.cs  I2c.cs  Md5_.cs  Wifi.cs
Ev3CoreUnsafe/Cinput/: Input.cs
Ev3CoreUnsafe/Cmemory/: Memory.cs
Ev3CoreUnsafe/Coutput/: Output.cs
Ev3CoreUnsafe/Csound/: Sound.cs
Ev3CoreUnsafe/Cui/: Lcd.cs  Terminal.cs  Ui.cs
Ev3CoreUnsafe/Enums/: AIconNo.cs  ArraySubcode.cs  BmpType.cs  BrowserType.cs  BtType.cs  ButtonType.cs  Color.cs  ComGetSubcode.cs  ComReadSubcode.cs  ComSetSubcode.cs  ComWriteSubcode.cs  Conn.cs  DataFormat.cs  Del.cs  DevCmd.cs  DspStat.cs  Encrypt_.cs  Err.cs  FileSubcode.cs  FileType.cs  FilenameSubcode.cs  FontType.cs  HwType.cs  IconType.cs  InfoSubcode.cs  InputDeviceSubcode.cs  LIconNo.cs  LedPattern.cs  LedType.cs  MIconNo.cs  MathType.cs  Mix.cs  NIconNo.cs  NxtColor.cs  ObjStat.cs  Op.cs  ProgramInfoSubcode.cs  Result.cs  SIconNo.cs  Slot.cs  (+10 more)
Ev3CoreUnsafe/Helpers/: BmpHelper.cs  (+3 more)
Ev3Decompiler/: Ev3Decompiler.csproj
Ev3Emulator/: App.axaml  App.axaml.cs  Ev3Emulator.csproj  Program.cs
Ev3EmulatorCore/: Class1.cs  Ev3EmulatorCore.csproj
Ev3Firmware/: CMakeLists.txt  Ev3Firmware.cpp  Ev3Firmware.h
Ev3LowLevel/: CMakeLists.txt
Ev3LowLevel/a_win/: CMakeLists.txt  dirent_win.h
Ev3LowLevel/c_com/: CMakeLists.txt  c_bt.c  c_bt.h  c_com.c  c_com.h  c_daisy.c  c_daisy.h  c_i2c.c  c_md5.c  c_wifi.c  c_wifi.h
Ev3LowLevel/c_dynload/: CMakeLists.txt  c_dynload.c  c_dynload.h
Ev3LowLevel/c_input/: CMakeLists.txt  c_input.c  c_input.h
Ev3LowLevel/c_memory/: CMakeLists.txt  c_memory.c
Ev3LowLevel/c_output/: CMakeLists.txt  c_output.c
Ev3LowLevel/c_robotcvm/: CMakeLists.txt
Ev3LowLevel/c_sound/: CMakeLists.txt  c_sound.c
Ev3LowLevel/c_sound/rsfs/: 10.rsf  7.rsf  9.rsf  PowerDown.rsf
Ev3LowLevel/c_ui/: CMakeLists.txt  browser.c  button.c  c_ui.c  c_ui.h  d_lcd.c  d_terminal.c  dialog.c  graph.c  led.c  power.c
Ev3LowLevel/data/: CMakeLists.txt
Ev3LowLevel/data/brick_program/: CMakeLists.txt
Ev3LowLevel/data/device_types/: CMakeLists.txt  typedata.rcf
Ev3LowLevel/lms2012/: CMakeLists.txt  bytecodes.c  bytecodes.h  c_branch.c  c_timer.c  lms2012.c  lms2012.h  lmstypes.h  validate.c
Ev3LowLevel/lmssrc/: CMakeLists.txt
Ev3LowLevel/lmssrc/Brick Program/: OnBrickSound01.raw  OnBrickSound04.raw  OnBrickSound08.raw
Ev3LowLevel/lmssrc/Debug/: Debug.rbf
Ev3LowLevel/lmssrc/TEST/: CMakeLists.txt  Test.rsf
Ev3LowLevel/lmssrc/Wifi/: GeneralAlarm.raw
Ev3LowLevel/lmssrc/apps/: CMakeLists.txt
Ev3LowLevel/lmssrc/apps/Brick Datalog/: Brick Datalog.rbf
Ev3LowLevel/lmssrc/apps/Brick Program/: OnBrickSound03.raw  OnBrickSound10.raw  template.rbf
Ev3LowLevel/lmssrc/prjs/: CMakeLists.txt
Ev3LowLevel/lmssrc/prjs/BrkDL_SAVE/: CMakeLists.txt
Ev3LowLevel/lmssrc/sys/: CMakeLists.txt
Ev3LowLevel/lmssrc/sys/tst/: Performance.rbf  tstiic.rbf  tstlog.rbf  us.rbf
Ev3LowLevel/lmssrc/sys/ui/: ui.rbf
Ev3LowLevel/lmssrc/tools/: CMakeLists.txt
Ev3LowLevel/lmssrc/tools/Bluetooth/: Bluetooth.rbf
Ev3LowLevel/lmssrc/tools/Debug/: Debug.rbf
Ev3LowLevel/lmssrc/tools/Sleep/: Sleep.rbf
Ev3LowLevel/lmssrc/tools/Volume/: Volume.rbf
Ev3LowLevel/lmssrc/tst/: si.rbf  tstmath.rbf
Ev3LowLevel/lmssrc/ui/: DownloadSuccess.raw  Startup.raw
Ev3LowLevel/low_level/: CMakeLists.txt  dirent_win.c  dirent_win.h  w_buttons.c  w_buttons.h  w_filesystem.c  w_filesystem.h  w_input.c  w_input.h  w_lcd.c  w_lcd.h  w_motors.c  w_motors.h  w_sound.c  w_sound.h  w_system.c  w_system.h  w_time.c  w_time.h  w_wifi.c  w_wifi.h
Ev3LowLevel/win/: CMakeLists.txt  dirent_win.c
Ev3LowLevelLib/: Ev3Entity.cs  Ev3LowLevelLib.csproj  Op.cs  SensorType.cs
Ev3Model/: BlockFamilyColorizer.cs  BlockInfo.cs  BlockInfo_generated.cs  Ev3Model.csproj  IdentificationHelper.cs  Node.cs  NodeConversion.cs  Parameter.cs  Project.cs  ProjectConversion.cs  ProjectResultData.cs  TODO.txt  Utils.cs
lms2012-compat-ev3dev-stretch/: CMakeLists.txt  anime.md
lms2012-compat-ev3dev-stretch/externed/: CMakeLists.txt  emulator.c  emulator.h  ext_wifi.c  ext_wifi.h
(+257 files in other folders)
